# nao-leap-control

./: README-LeapMain.txt  README-Nao.txt  README.md
lib/nao/jnaoqi-1.14.1-linux32/: CMakeLists.txt  README.txt
lib/nao/jnaoqi-1.14.1-linux32/src/java/com/aldebaran/proxy/: ALAudioSourceLocalizationProxy.java  ALDarknessDetectionProxy.java  ALInfraredProxy.java  ALLedsProxy.java  ALLoggerProxy.java  ALMemoryProxy.java  ALMotionRecorderProxy.java  ALNavigationProxy.java  ALPythonBridgeProxy.java  ALSpeechRecognitionProxy.java  ALVisionToolboxProxy.java
lib/nao/jnaoqi-1.14.1-linux32/src/jni/: jnaoqi.i
lib/nao/jnaoqi-1.14.1-linux64/: qiproject.xml
lib/nao/jnaoqi-1.14.1-linux64/doc/examples/: Memory.java  Move.java  MoveHead.java  SayHello.java  ShowImage.java
lib/nao/jnaoqi-1.14.1-linux64/src/jni/: CMakeLists.txt  javaproxy.cpp  javaproxy.h
lib/nao/jnaoqi-1.14.1-win32-vs2010/: AUTHORS
src/main/java/com/sfeir/devoxx/common/: Command.java
src/main/java/com/sfeir/devoxx/coordination/: Coordinator.java
src/main/java/com/sfeir/devoxx/leap/: CommandListener.java  LeapController.java  LeapControllerFactory.java
src/main/java/com/sfeir/devoxx/nao/: NaoCommand.java  NaoController.java  NaoControllerFactory.java
src/main/java/com/sfeir/devoxx/ui/: NaoContainer.java  NaoLeapFrame.java
src/test/java/com/sfeir/devoxx/: TesAll.java
src/test/java/com/sfeir/devoxx/leap/: LeapControllerFactoryMock.java  LeapControllerMock.java  LeapMain.java
src/test/java/com/sfeir/devoxx/nao/: NaoControllerMock.java  TestNaoController.java
(+38 files in other folders)
